# ReadingListBot

./: .envtemplate  .gitignore  Cargo.toml  README.md  tables.sql
src/: database.rs  helpers.rs  main.rs  types.rs  types_display.rs
src/al_queries/: get_anime.rs  graphql_queries.rs  mod.rs
src/commands/: add_anime.rs  add_resource.rs  link_resource.rs  list_resources.rs  mod.rs  show_anime.rs  show_resource.rs  unlink_resource.rs
