[package]
name = "ReadingListBot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
poise = "0.6.2"
reqwest = { version = "0.13.4", features = ["json"] }
rusqlite = "0.40.0"
serde = "1.0.228"
serde_json = "1.0.150"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"]}
